Fix for records validation